--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     </main>
     <footer></footer>
     <script>
-        alert("ジャンケンに負けると阿部寛に会えるかもょ。。。世界最速かもょ。。。resetすると何度も同じメッセージが出るょ。。。")
+        alert("11月7日までに5勝連続した証明を川合にすると何かもらえる？！？！？")
+        alert("いちおう言っておくと5勝以降は何もないからね！！！ぷん！！！")
+
       </script>
 
     <!-- //じゃんけん用のSCRIPTを書いてください -->
@@ -113,13 +115,11 @@
                     // win_count +=1
                     win_count = parseInt(win_count)+1
 
-                    if (win_count == 1){
+                    if (win_count == 5){
                         // ここで画面の配置を作っている
                         $('body').append('<div id="bg">').append('<div id="modal">');
                         // ここでYOUTUBEを表示
-                        // $('#modal').append('<img src="./img/main.png" class="death">','<p>スクショを送って川合にdiscordで連絡すると良いことあるかも</p>');
-                        // $('#modal').append('<img src="./img/main.png" class="death">','<p>スクショを送って川合にdiscordで連絡すると良いことあるかも</p>');
-                        $('#modal').append('<iframe id="lose" width="100%" height="100%" src="https://www.youtube.com/embed/jvd0GCKm7Hk?controls=0&amp;start=2&end=33" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>');                      
+                        $('#modal').append('<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DStr8qCox1I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>');                      
                         $('#bg').click(function(){
                         // バックグラウンドorモーダルを押した時に消したい
                         $('#bg,#modal').remove();
@@ -135,8 +135,7 @@
                     // ここで画面の配置を作っている
                     $('body').append('<div id="bg">').append('<div id="modal">');
                     // ここでYOUTUBEを表示
-                    $('#modal').append('<img src="./img/death_max.jpg" class="death">');
-
+                    $('#modal').append('<img src="./img/death_max.jpg" class="death">','<p class="modal_message">残念！勝ち数はresetしてやった！</p>','<p class="modal_message">5勝連勝をすると川合からプレゼント・・・？次は頑張ろう！</p>');
                     $('#bg').click(function(){
                     // バックグラウンドorモーダルを押した時に消したい
                     $('#bg,#modal').remove();
@@ -173,7 +172,7 @@
                     // ここで画面の配置を作っている
                     $('body').append('<div id="bg">').append('<div id="modal">');
                     // ここでYOUTUBEを表示
-                    $('#modal').append('<img src="./img/death_max.jpg" class="death">');
+                    $('#modal').append('<img src="./img/death_max.jpg" class="death">','<p class="modal_message">残念！勝ち数はresetしてやった！</p>','<p class="modal_message">5勝連勝をすると川合からプレゼント・・・？次は頑張ろう！</p>');
                     $('#bg').click(function(){
                     // バックグラウンドorモーダルを押した時に消したい
                     $('#bg,#modal').remove();
@@ -196,14 +195,12 @@
                     // win_count +=1
                     win_count = parseInt(win_count)+1
 
-                    if (win_count == 1)
+                    if (win_count == 5)
                     {
                         // ここで画面の配置を作っている
                         $('body').append('<div id="bg">').append('<div id="modal">');
                         // ここでYOUTUBEを表示
-                        // $('#modal').append('<img src="./img/main.png" class="death">','<p>スクショを送って川合にdiscordで連絡すると良いことあるかも</p>');
-                        // $('#modal').append('<img src="./img/main.png" class="death">','<p>スクショを送って川合にdiscordで連絡すると良いことあるかも</p>');
-                        $('#modal').append('<iframe id="lose" width="100%" height="100%" src="https://www.youtube.com/embed/jvd0GCKm7Hk?controls=0&amp;start=2&end=33" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>');                      
+                        $('#modal').append('<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DStr8qCox1I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>');                      
                         $('#bg').click(function(){
                         // バックグラウンドorモーダルを押した時に消したい
                         $('#bg,#modal').remove();                         
@@ -233,14 +230,12 @@
                     // win_count +=1
                     win_count = parseInt(win_count)+1  
                     
-                    if (win_count == 1)
+                    if (win_count == 5)
                     {
                         // ここで画面の配置を作っている
                         $('body').append('<div id="bg">').append('<div id="modal">');
                         // ここでYOUTUBEを表示
-                        // $('#modal').append('<img src="./img/main.png" class="death">','<p>スクショを送って川合にdiscordで連絡すると良いことあるかも</p>');
-                        // $('#modal').append('<img src="./img/main.png" class="death">','<p>スクショを送って川合にdiscordで連絡すると良いことあるかも</p>');
-                        $('#modal').append('<iframe id="lose" width="100%" height="100%" src="https://www.youtube.com/embed/jvd0GCKm7Hk?controls=0&amp;start=2&end=33" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>');                      
+                        $('#modal').append('<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DStr8qCox1I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>');                      
                         $('#bg').click(function(){
                         // バックグラウンドorモーダルを押した時に消したい
                         $('#bg,#modal').remove();                         
@@ -256,7 +251,7 @@
                     // ここで画面の配置を作っている
                     $('body').append('<div id="bg">').append('<div id="modal">');
                     // ここでYOUTUBEを表示
-                    $('#modal').append('<img src="./img/death_max.jpg" class="death">');
+                    $('#modal').append('<img src="./img/death_max.jpg" class="death">','<p class="modal_message">残念！勝ち数はresetしてやった！</p>','<p class="modal_message">5勝連勝をすると川合からプレゼント・・・？次は頑張ろう！</p>');
                     $('#bg').click(function(){
                     // バックグラウンドorモーダルを押した時に消したい
                     $('#bg,#modal').remove();
