リロードの参照先を変更しました

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li id="draw_count">あいこ</li>
       </ul>
     <div class="resetbtn">
-    <a href="./janken_tpl.html">
+    <a href="./">
     <button id="clear">データクリア</button></a>
     </div>
     <div class="main">   
